--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,9 @@
   <artifactId>iniflex</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>teste-pratico</name>
+  
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 </project>
